Part 2(filter form)

--- a/OnlineShop/src/scss/sections/_header.scss
+++ b/OnlineShop/src/scss/sections/_header.scss
@@ -130,3 +130,12 @@
   background-color: #1a1a1a;
   font-size: 18px;
 }
+
+.modal-window-full-product-img-basket {
+  width: 162px;
+  height: 114px;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-position: center;
+}
