--- a/OnlineShop/src/templates/data.html
+++ b/OnlineShop/src/templates/data.html
@@ -7,7 +7,8 @@
 				<a href="#" type="button" class="btn btn-prod-details"
 				   data-toggle="modal"
 				   data-target="#productModal" data-whatever="10">Quick View</a>
-				<a href="#" class="btn btn-basket"><i
+				<a href="#" class="btn btn-basket" data-toggle="modal"
+				   data-target="#exampleModal"><i
 						class="fas fa-shopping-basket"></i> add to
 					cart</a>
 				<div class="products-icon-sale">sale</div>
@@ -41,7 +42,8 @@
 				<a href="#" type="button" class="btn btn-prod-details"
 				   data-toggle="modal"
 				   data-target="#productModal" data-whatever="11">Quick View</a>
-				<a href="#" class="btn btn-basket"><i
+				<a href="#" class="btn btn-basket" data-toggle="modal"
+				   data-target="#exampleModal"><i
 						class="fas fa-shopping-basket"></i> add to
 					cart</a>
 				<div class="products-icon-sale">sale</div>
@@ -75,7 +77,8 @@
 				<a href="#" type="button" class="btn btn-prod-details"
 				   data-toggle="modal"
 				   data-target="#productModal" data-whatever="12">Quick View</a>
-				<a href="#" class="btn btn-basket"><i
+				<a href="#" class="btn btn-basket" data-toggle="modal"
+				   data-target="#exampleModal"><i
 						class="fas fa-shopping-basket"></i> add to
 					cart</a>
 				<div class="products-icon-sale">sale</div>
@@ -109,7 +112,8 @@
 				<a href="#" type="button" class="btn btn-prod-details"
 				   data-toggle="modal"
 				   data-target="#productModal" data-whatever="13">Quick View</a>
-				<a href="#" class="btn btn-basket"><i
+				<a href="#" class="btn btn-basket" data-toggle="modal"
+				   data-target="#exampleModal"><i
 						class="fas fa-shopping-basket"></i> add to
 					cart</a>
 				<div class="products-icon-sale">sale</div>
@@ -143,7 +147,8 @@
 				<a href="#" type="button" class="btn btn-prod-details"
 				   data-toggle="modal"
 				   data-target="#productModal" data-whatever="14">Quick View</a>
-				<a href="#" class="btn btn-basket"><i
+				<a href="#" class="btn btn-basket" data-toggle="modal"
+				   data-target="#exampleModal"><i
 						class="fas fa-shopping-basket"></i> add to
 					cart</a>
 				<div class="products-icon-sale">sale</div>
@@ -177,7 +182,8 @@
 				<a href="#" type="button" class="btn btn-prod-details"
 				   data-toggle="modal"
 				   data-target="#productModal" data-whatever="15">Quick View</a>
-				<a href="#" class="btn btn-basket"><i
+				<a href="#" class="btn btn-basket" data-toggle="modal"
+				   data-target="#exampleModal"><i
 						class="fas fa-shopping-basket"></i> add to
 					cart</a>
 				<div class="products-icon-sale">sale</div>
@@ -211,7 +217,8 @@
 				<a href="#" type="button" class="btn btn-prod-details"
 				   data-toggle="modal"
 				   data-target="#productModal" data-whatever="16">Quick View</a>
-				<a href="#" class="btn btn-basket"><i
+				<a href="#" class="btn btn-basket" data-toggle="modal"
+				   data-target="#exampleModal"><i
 						class="fas fa-shopping-basket"></i> add to
 					cart</a>
 				<div class="products-icon-sale">sale</div>
@@ -245,7 +252,8 @@
 				<a href="#" type="button" class="btn btn-prod-details"
 				   data-toggle="modal"
 				   data-target="#productModal" data-whatever="17">Quick View</a>
-				<a href="#" class="btn btn-basket"><i
+				<a href="#" class="btn btn-basket" data-toggle="modal"
+				   data-target="#exampleModal"><i
 						class="fas fa-shopping-basket"></i> add to
 					cart</a>
 				<div class="products-icon-sale">sale</div>
@@ -279,7 +287,8 @@
 				<a href="#" type="button" class="btn btn-prod-details"
 				   data-toggle="modal"
 				   data-target="#productModal" data-whatever="18">Quick View</a>
-				<a href="#" class="btn btn-basket"><i
+				<a href="#" class="btn btn-basket" data-toggle="modal"
+				   data-target="#exampleModal"><i
 						class="fas fa-shopping-basket"></i> add to
 					cart</a>
 				<div class="products-icon-sale">sale</div>
@@ -313,7 +322,8 @@
 				<a href="#" type="button" class="btn btn-prod-details"
 				   data-toggle="modal"
 				   data-target="#productModal" data-whatever="19">Quick View</a>
-				<a href="#" class="btn btn-basket"><i
+				<a href="#" class="btn btn-basket" data-toggle="modal"
+				   data-target="#exampleModal"><i
 						class="fas fa-shopping-basket"></i> add to
 					cart</a>
 				<div class="products-icon-sale">sale</div>
@@ -347,7 +357,8 @@
 				<a href="#" type="button" class="btn btn-prod-details"
 				   data-toggle="modal"
 				   data-target="#productModal" data-whatever="20">Quick View</a>
-				<a href="#" class="btn btn-basket"><i
+				<a href="#" class="btn btn-basket" data-toggle="modal"
+				   data-target="#exampleModal"><i
 						class="fas fa-shopping-basket"></i> add to
 					cart</a>
 				<div class="products-icon-sale">sale</div>
