--- a/OnlineShop/src/templates/gallery.html
+++ b/OnlineShop/src/templates/gallery.html
@@ -11,7 +11,9 @@
                     <a href="#"  id="galleryQV" data-view="tooltip" data-toggle="modal" data-target="#productModal"  data-placement="right"
                        title="Quick view"><i
                             class="fas fa-eye border border-dark p-2 mb-1 ml-2"></i></a>
-                    <a href="#" data-view="tooltip" data-placement="right" title="Add to cart"><i
+                    <a class="addList-basket" href="#" data-view="tooltip" data-placement="right" title="Add to cart"
+                       data-toggle="modal"
+                       data-target="#exampleModal"><i
                             class="fas fa-shopping-basket border border-dark p-2 mb-1 ml-2"></i></a>
                 </div>
 
@@ -19,7 +21,7 @@
 
                     <div class="price  rounded-circle bg-secondary  px-2 py-4">
                         <div class="price-now h4 text-white">&#36;120.00</div>
-                        <div class="price-now h6 text-white"><s>&#36;160.00</s></div>
+                        <div class="price-old h6 text-white"><s>&#36;160.00</s></div>
                     </div>
                     <div class="main-info bg-light">
                         <div class="triangle-topleft"></div>
