--- a/OnlineShop/src/templates/header.html
+++ b/OnlineShop/src/templates/header.html
@@ -26,7 +26,7 @@
                     <div class="modal-window-full-card-product ">
                         <div class="container a">
                             <div class=" col-lg-6 d-flex flex-wrap justify-content-between">
-                                <img class="col-6 col-sm-4 col-lg-5 p-1" src="" height="114" width="162"/>
+                                <div class="modal-window-full-product-img-basket col-6 col-sm-4 col-lg-5 p-1" ></div>
                                 <div class="col-6 col-lg-7 p-0 align-items-center">
                                     <p class="modal-window-full-product-title font-weight-bold">Sun</p>
                                     <div class="modal-window-full-product-price-block">
