--- a/OnlineShop/src/templates/products.html
+++ b/OnlineShop/src/templates/products.html
@@ -29,7 +29,8 @@
 										<a href="#" type="button" class="btn btn-prod-details"
 										   data-toggle="modal"
 										   data-target="#productModal" data-whatever="1">Quick View</a>
-										<a href="#" class="btn btn-basket"><i
+										<a href="#" class="btn btn-basket" data-toggle="modal"
+										   data-target="#exampleModal"><i
 												class="fas fa-shopping-basket"></i> add to
 											cart</a>
 										<div class="products-icon-sale">sale</div>
@@ -63,7 +64,8 @@
 										<a href="#" type="button" class="btn btn-prod-details"
 										   data-toggle="modal"
 										   data-target="#productModal" data-whatever="2">Quick View</a>
-										<a href="#" class="btn btn-basket"><i
+										<a href="#" class="btn btn-basket" data-toggle="modal"
+										   data-target="#exampleModal"><i
 												class="fas fa-shopping-basket"></i> add to
 											cart</a>
 										<div class="products-icon-sale">sale</div>
@@ -98,7 +100,8 @@
 										<a href="#" type="button" class="btn btn-prod-details"
 										   data-toggle="modal"
 										   data-target="#productModal" data-whatever="3">Quick View</a>
-										<a href="#" class="btn btn-basket"><i
+										<a href="#" class="btn btn-basket" data-toggle="modal"
+										   data-target="#exampleModal"><i
 												class="fas fa-shopping-basket"></i> add to
 											cart</a>
 										<div class="products-icon-sale">sale</div>
@@ -132,7 +135,8 @@
 										<a href="#" type="button" class="btn btn-prod-details"
 										   data-toggle="modal"
 										   data-target="#productModal" data-whatever="4">Quick View</a>
-										<a href="#" class="btn btn-basket"><i
+										<a href="#" class="btn btn-basket" data-toggle="modal"
+										   data-target="#exampleModal"><i
 												class="fas fa-shopping-basket"></i> add to
 											cart</a>
 										<div class="products-icon-sale">sale</div>
@@ -166,7 +170,8 @@
 										<a href="#" type="button" class="btn btn-prod-details"
 										   data-toggle="modal"
 										   data-target="#productModal" data-whatever="5">Quick View</a>
-										<a href="#" class="btn btn-basket"><i
+										<a href="#" class="btn btn-basket" data-toggle="modal"
+										   data-target="#exampleModal"><i
 												class="fas fa-shopping-basket"></i> add to
 											cart</a>
 										<div class="products-icon-sale">sale</div>
@@ -200,7 +205,8 @@
 										<a href="#" type="button" class="btn btn-prod-details"
 										   data-toggle="modal"
 										   data-target="#productModal" data-whatever="6">Quick View</a>
-										<a href="#" class="btn btn-basket"><i
+										<a href="#" class="btn btn-basket" data-toggle="modal"
+										   data-target="#exampleModal"><i
 												class="fas fa-shopping-basket"></i> add to
 											cart</a>
 										<div class="products-icon-sale">sale</div>
@@ -234,7 +240,8 @@
 										<a href="#" type="button" class="btn btn-prod-details"
 										   data-toggle="modal"
 										   data-target="#productModal" data-whatever="7">Quick View</a>
-										<a href="#" class="btn btn-basket"><i
+										<a href="#" class="btn btn-basket" data-toggle="modal"
+										   data-target="#exampleModal"><i
 												class="fas fa-shopping-basket"></i> add to
 											cart</a>
 										<div class="products-icon-sale">sale</div>
@@ -268,7 +275,8 @@
 										<a href="#" type="button" class="btn btn-prod-details"
 										   data-toggle="modal"
 										   data-target="#productModal" data-whatever="8">Quick View</a>
-										<a href="#" class="btn btn-basket"><i
+										<a href="#" class="btn btn-basket" data-toggle="modal"
+										   data-target="#exampleModal"><i
 												class="fas fa-shopping-basket"></i> add to
 											cart</a>
 										<div class="products-icon-sale">sale</div>
@@ -302,7 +310,8 @@
 										<a href="#" type="button" class="btn btn-prod-details"
 										   data-toggle="modal"
 										   data-target="#productModal" data-whatever="9">Quick View</a>
-										<a href="#" class="btn btn-basket"><i
+										<a href="#" class="btn btn-basket" data-toggle="modal"
+										   data-target="#exampleModal"><i
 												class="fas fa-shopping-basket"></i> add to
 											cart</a>
 										<div class="products-icon-sale">sale</div>
@@ -370,7 +379,8 @@
 											</div>
 											<hr class="modal-product-hr">
 											<div>
-												<a href="#" class="btn btn-basket-light"><i
+												<a href="#" class="btn btn-basket-light" data-toggle="modal"
+												   data-target="#exampleModal"><i
 														class="fas fa-shopping-basket"></i> add to
 													cart
 												</a>
